--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,9 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Assignment Solution for Module 2</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<h1>Our Menu</h1>
 
+	<section class="col-lg-4 col-md-6 col-sm-12">
+		<div class="box">
+			<div class="section-title">Chicken</div>
+			<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, turpis eget semper fermentum, enim augue congue magna, ut imperdiet dolor justo quis ligula. Praesent turpis eros, finibus at ornare eget, tristique nec nunc. Nulla ut finibus neque. Fusce nec tempor ex, nec hendrerit augue. Vestibulum eget congue odio, et sagittis mauris. Proin sodales nisl vitae dui venenatis mattis. Vestibulum risus nunc, placerat quis nisi sit amet, blandit viverra leo. Suspendisse nisl quam, scelerisque non volutpat id, ultricies et est. Duis egestas dictum tortor. Vivamus eu maximus sapien.</div>
+		</div>
+	</section>
+
+	<section class="col-lg-4 col-md-6 col-sm-12">
+		<div class="box">
+			<div class="section-title">Beef</div>
+			<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, turpis eget semper fermentum, enim augue congue magna, ut imperdiet dolor justo quis ligula. Praesent turpis eros, finibus at ornare eget, tristique nec nunc. Nulla ut finibus neque. Fusce nec tempor ex, nec hendrerit augue. Vestibulum eget congue odio, et sagittis mauris. Proin sodales nisl vitae dui venenatis mattis. Vestibulum risus nunc, placerat quis nisi sit amet, blandit viverra leo. Suspendisse nisl quam, scelerisque non volutpat id, ultricies et est. Duis egestas dictum tortor. Vivamus eu maximus sapien.</div>
+		</div>
+	</section>
+
+	<section class="col-lg-4 col-md-12 col-sm-12">
+		<div class="box">
+			<div class="section-title">Sushi</div>
+			<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, turpis eget semper fermentum, enim augue congue magna, ut imperdiet dolor justo quis ligula. Praesent turpis eros, finibus at ornare eget, tristique nec nunc. Nulla ut finibus neque. Fusce nec tempor ex, nec hendrerit augue. Vestibulum eget congue odio, et sagittis mauris. Proin sodales nisl vitae dui venenatis mattis. Vestibulum risus nunc, placerat quis nisi sit amet, blandit viverra leo. Suspendisse nisl quam, scelerisque non volutpat id, ultricies et est. Duis egestas dictum tortor. Vivamus eu maximus sapien.</div>
+		</div>
+	</section>
 </body>
 </html>>
