--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -2,14 +2,40 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<title>Assignment Solution for Module 3</title>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+	<header>
+		<nav id="header-nav" class="navbar navbar-expand-lg navbar-light bg-light">
+	  		<div class="container">
+	  			<a class="navbar-brand" href="index.html">Food, LLC</a>
+		  		<button class="navbar-toggler d-block d-sm-none" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		    		<span class="navbar-toggler-icon"></span>
+		  		</button>
 
-	<script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+  				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+    				<ul class="navbar-nav mr-auto d-sm-none">
+      					<li class="nav-item">
+        					<a class="nav-link text-center" href="#">Chicken</a>
+      					</li>
+				      	<li class="nav-item">
+				        	<a class="nav-link text-center" href="#">Beef</a>
+				      	</li>
+				      	<li class="nav-item">
+				        	<a class="nav-link text-center" href="#">Sushi</a>
+				      	</li>
+    				</ul>
+    			</div>
+	  		</div>
+		</nav>
+	</header>
+
+
+	<!--jquery and js-->
+	<script src="js/jquery-3.5.1.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
