--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -9,29 +9,59 @@
 </head>
 <body>
 	<header>
-		<nav id="header-nav" class="navbar navbar-expand-lg navbar-light bg-light">
+		<nav id="header-nav" class="navbar navbar-expand-lg navbar-dark">
 	  		<div class="container">
-	  			<a class="navbar-brand" href="index.html">Food, LLC</a>
+	  			<a class="navbar-brand" href="index.html"><h1>Food, LLC</h1></a>
 		  		<button class="navbar-toggler d-block d-sm-none" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    		<span class="navbar-toggler-icon"></span>
 		  		</button>
-
-  				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-    				<ul class="navbar-nav mr-auto d-sm-none">
-      					<li class="nav-item">
-        					<a class="nav-link text-center" href="#">Chicken</a>
-      					</li>
-				      	<li class="nav-item">
-				        	<a class="nav-link text-center" href="#">Beef</a>
-				      	</li>
-				      	<li class="nav-item">
-				        	<a class="nav-link text-center" href="#">Sushi</a>
-				      	</li>
-    				</ul>
-    			</div>
-	  		</div>
+			</div>
+  			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+    			<ul class="navbar-nav mr-auto d-sm-none">
+      				<li class="nav-item">
+        				<a class="nav-link text-center" href="#chicken"><span>Chicken</span></a>
+      				</li>
+			      	<li class="nav-item">
+			        	<a class="nav-link text-center" href="#beef"><span>Beef</span></a>
+			      	</li>
+			      	<li class="nav-item">
+			        	<a class="nav-link text-center" href="#sushi"><span>Sushi</span></a>
+			      	</li>
+    			</ul>
+    		</div>
 		</nav>
 	</header>
+
+	<div id="main">
+		<div class="container">
+			<h2 class="text-center">Our Menu</h2>
+			<div class="row">
+				<section id="chicken" class="col-xs-12">
+					<div class="text-center">Chicken</div>
+					<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec euismod pellentesque felis, ac efficitur tortor pretium quis. Phasellus eu turpis vitae arcu tristique porta. Quisque a laoreet quam, et aliquet mi. Suspendisse elit mauris, ullamcorper imperdiet finibus nec, interdum id lacus. Pellentesque placerat, orci non commodo porta, urna ante blandit metus, eget molestie turpis lorem eu velit. Integer in nisl urna. Duis consequat nibh justo, tempor lacinia lacus efficitur vitae. Duis nisi est, feugiat vel tincidunt eu, pulvinar non eros. In imperdiet feugiat egestas. Aenean viverra posuere tortor, quis gravida metus malesuada eget. Ut ultricies libero vel pretium varius. Sed elit neque, malesuada at neque vitae, dapibus interdum magna. Vivamus pretium lacinia erat, sit amet imperdiet leo porta vel. Curabitur magna arcu, accumsan gravida massa iaculis, facilisis tempor nulla.
+					Etiam in augue quis dolor placerat accumsan eget et dui. Praesent vitae dui at felis fermentum aliquet ac nec dui. Integer consectetur consectetur magna eget commodo. Quisque accumsan sapien libero, eget porta ante laoreet et. Fusce dapibus lacinia justo sit amet porta. Praesent pellentesque dapibus justo, eu venenatis dui consequat a. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nullam eu faucibus leo. Integer id neque lorem. Aliquam quis turpis at arcu lobortis aliquet id et eros. Sed quam mi, efficitur placerat imperdiet ut, suscipit in risus.
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec euismod pellentesque felis, ac efficitur tortor pretium quis. Phasellus eu turpis vitae arcu tristique porta. Quisque a laoreet quam, et aliquet mi. Suspendisse elit mauris, ullamcorper imperdiet finibus nec, interdum id lacus. Pellentesque placerat, orci non commodo porta, urna ante blandit metus, eget molestie turpis lorem eu velit. Integer in nisl urna. Duis consequat nibh justo, tempor lacinia lacus efficitur vitae. Duis nisi est, feugiat vel tincidunt eu, pulvinar non eros. In imperdiet feugiat egestas. Aenean viverra posuere tortor, quis gravida metus malesuada eget. Ut ultricies libero vel pretium varius. Sed elit neque, malesuada at neque vitae, dapibus interdum magna. Vivamus pretium lacinia erat, sit amet imperdiet leo porta vel. Curabitur magna arcu, accumsan gravida massa iaculis, facilisis tempor nulla.
+					Etiam in augue quis dolor placerat accumsan eget et dui. Praesent vitae dui at felis fermentum aliquet ac nec dui. Integer consectetur consectetur magna eget commodo. Quisque accumsan sapien libero, eget porta ante laoreet et. Fusce dapibus lacinia justo sit amet porta. Praesent pellentesque dapibus justo, eu venenatis dui consequat a. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nullam eu faucibus leo. Integer id neque lorem. Aliquam quis turpis at arcu lobortis aliquet id et eros. Sed quam mi, efficitur placerat imperdiet ut, suscipit in risus.
+					</div>
+				</section>
+				<section id="beef" class="col-xs-12">
+					<div class="text-center">Beef</div>
+					<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec euismod pellentesque felis, ac efficitur tortor pretium quis. Phasellus eu turpis vitae arcu tristique porta. Quisque a laoreet quam, et aliquet mi. Suspendisse elit mauris, ullamcorper imperdiet finibus nec, interdum id lacus. Pellentesque placerat, orci non commodo porta, urna ante blandit metus, eget molestie turpis lorem eu velit. Integer in nisl urna. Duis consequat nibh justo, tempor lacinia lacus efficitur vitae. Duis nisi est, feugiat vel tincidunt eu, pulvinar non eros. In imperdiet feugiat egestas. Aenean viverra posuere tortor, quis gravida metus malesuada eget. Ut ultricies libero vel pretium varius. Sed elit neque, malesuada at neque vitae, dapibus interdum magna. Vivamus pretium lacinia erat, sit amet imperdiet leo porta vel. Curabitur magna arcu, accumsan gravida massa iaculis, facilisis tempor nulla.
+					Etiam in augue quis dolor placerat accumsan eget et dui. Praesent vitae dui at felis fermentum aliquet ac nec dui. Integer consectetur consectetur magna eget commodo. Quisque accumsan sapien libero, eget porta ante laoreet et. Fusce dapibus lacinia justo sit amet porta. Praesent pellentesque dapibus justo, eu venenatis dui consequat a. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nullam eu faucibus leo. Integer id neque lorem. Aliquam quis turpis at arcu lobortis aliquet id et eros. Sed quam mi, efficitur placerat imperdiet ut, suscipit in risus.
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec euismod pellentesque felis, ac efficitur tortor pretium quis. Phasellus eu turpis vitae arcu tristique porta. Quisque a laoreet quam, et aliquet mi. Suspendisse elit mauris, ullamcorper imperdiet finibus nec, interdum id lacus. Pellentesque placerat, orci non commodo porta, urna ante blandit metus, eget molestie turpis lorem eu velit. Integer in nisl urna. Duis consequat nibh justo, tempor lacinia lacus efficitur vitae. Duis nisi est, feugiat vel tincidunt eu, pulvinar non eros. In imperdiet feugiat egestas. Aenean viverra posuere tortor, quis gravida metus malesuada eget. Ut ultricies libero vel pretium varius. Sed elit neque, malesuada at neque vitae, dapibus interdum magna. Vivamus pretium lacinia erat, sit amet imperdiet leo porta vel. Curabitur magna arcu, accumsan gravida massa iaculis, facilisis tempor nulla.
+					Etiam in augue quis dolor placerat accumsan eget et dui. Praesent vitae dui at felis fermentum aliquet ac nec dui. Integer consectetur consectetur magna eget commodo. Quisque accumsan sapien libero, eget porta ante laoreet et. Fusce dapibus lacinia justo sit amet porta. Praesent pellentesque dapibus justo, eu venenatis dui consequat a. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nullam eu faucibus leo. Integer id neque lorem. Aliquam quis turpis at arcu lobortis aliquet id et eros. Sed quam mi, efficitur placerat imperdiet ut, suscipit in risus.</div>
+				</section>
+				<section id="sushi" class="col-xs-12">
+					<div class="text-center">Sushi</div>
+					<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec euismod pellentesque felis, ac efficitur tortor pretium quis. Phasellus eu turpis vitae arcu tristique porta. Quisque a laoreet quam, et aliquet mi. Suspendisse elit mauris, ullamcorper imperdiet finibus nec, interdum id lacus. Pellentesque placerat, orci non commodo porta, urna ante blandit metus, eget molestie turpis lorem eu velit. Integer in nisl urna. Duis consequat nibh justo, tempor lacinia lacus efficitur vitae. Duis nisi est, feugiat vel tincidunt eu, pulvinar non eros. In imperdiet feugiat egestas. Aenean viverra posuere tortor, quis gravida metus malesuada eget. Ut ultricies libero vel pretium varius. Sed elit neque, malesuada at neque vitae, dapibus interdum magna. Vivamus pretium lacinia erat, sit amet imperdiet leo porta vel. Curabitur magna arcu, accumsan gravida massa iaculis, facilisis tempor nulla.
+					Etiam in augue quis dolor placerat accumsan eget et dui. Praesent vitae dui at felis fermentum aliquet ac nec dui. Integer consectetur consectetur magna eget commodo. Quisque accumsan sapien libero, eget porta ante laoreet et. Fusce dapibus lacinia justo sit amet porta. Praesent pellentesque dapibus justo, eu venenatis dui consequat a. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nullam eu faucibus leo. Integer id neque lorem. Aliquam quis turpis at arcu lobortis aliquet id et eros. Sed quam mi, efficitur placerat imperdiet ut, suscipit in risus.
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec euismod pellentesque felis, ac efficitur tortor pretium quis. Phasellus eu turpis vitae arcu tristique porta. Quisque a laoreet quam, et aliquet mi. Suspendisse elit mauris, ullamcorper imperdiet finibus nec, interdum id lacus. Pellentesque placerat, orci non commodo porta, urna ante blandit metus, eget molestie turpis lorem eu velit. Integer in nisl urna. Duis consequat nibh justo, tempor lacinia lacus efficitur vitae. Duis nisi est, feugiat vel tincidunt eu, pulvinar non eros. In imperdiet feugiat egestas. Aenean viverra posuere tortor, quis gravida metus malesuada eget. Ut ultricies libero vel pretium varius. Sed elit neque, malesuada at neque vitae, dapibus interdum magna. Vivamus pretium lacinia erat, sit amet imperdiet leo porta vel. Curabitur magna arcu, accumsan gravida massa iaculis, facilisis tempor nulla.
+					Etiam in augue quis dolor placerat accumsan eget et dui. Praesent vitae dui at felis fermentum aliquet ac nec dui. Integer consectetur consectetur magna eget commodo. Quisque accumsan sapien libero, eget porta ante laoreet et. Fusce dapibus lacinia justo sit amet porta. Praesent pellentesque dapibus justo, eu venenatis dui consequat a. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nullam eu faucibus leo. Integer id neque lorem. Aliquam quis turpis at arcu lobortis aliquet id et eros. Sed quam mi, efficitur placerat imperdiet ut, suscipit in risus.</div>
+				</section>
+			</div>
+		</div>
+		
+	</div>
 
 
 	<!--jquery and js-->
